# efivar-rs

./: .editorconfig  .gitignore  .releaserc.json  .travis.yml  CHANGELOG.md  CODEOWNERS  Cargo.toml  LICENSE  Makefile.toml  README.md  appveyor.yml  build.bat  renovate.json  rust-toolchain.toml  tarpaulin.toml
.github/workflows/: build.yml  pullrequest.yml  release.yml
ci/: grcov.ds  release.sh  setversion.sh
efiboot/: Cargo.toml  README.md
efiboot/src/: cli.rs  exit_code.rs  id.rs  lib.rs  main.rs
efiboot/src/cli/: boot.rs  delete.rs  dump.rs  export.rs  import.rs  list.rs  mod.rs  read.rs  tests.rs
efiboot/src/cli/boot/: add.rs  del.rs  delete.rs  enable_disable.rs  get_entries.rs  get_order.rs  mod.rs  next.rs  tests.rs
efiboot/src/cli/boot/add/: disk.rs
efiboot/src/cli/boot/add/disk/: linux.rs
efiboot/src/cli/boot/order/: add.rs  get.rs  mod.rs  remove.rs  set.rs  tests.rs
efiboot/src/cli/boot/partition/: linux.rs  windows.rs
efiboot/src/cli/boot/tests/: add.rs  delete.rs  enable_disable.rs  get_entries.rs  mod.rs  next.rs
efivar/: Cargo.toml  README.md
efivar/src/: boot.rs  efi.rs  enumerator.rs  error.rs  lib.rs  push.rs  reader.rs  store.rs  sys.rs  test_utils.rs  utils.rs  writer.rs
efivar/src/boot/: boot_entries_reader.rs  boot_entry_iter.rs  boot_entry_parser.rs  boot_order_reader.rs  boot_reader.rs  boot_var_reader.rs  mod.rs  parse.rs  reader.rs  writer.rs
efivar/src/boot/parse/: boot_entry.rs  boot_variable.rs  consts.rs  device_path.rs  device_path_list.rs  mod.rs
efivar/src/boot/parse/tests/: dump.rs  mod.rs  parse.rs
efivar/src/efi/: variable.rs  variable_flags.rs  variable_name.rs  variable_vendor.rs
efivar/src/store/: file.rs  guid_group.rs  memory.rs  mod.rs  store_value.rs  variable.rs  vendor_group.rs
efivar/src/sys/: linux.rs  mod.rs  windows.rs
efivar/src/sys/linux/: efivarfs.rs  efivars.rs  mod.rs
efivar/src/sys/windows/: mod.rs  security.rs
efivarcli/: Cargo.toml  README.md
efivarcli/src/: main.rs
efivarcli/src/cli/: delete.rs  export.rs  import.rs  list.rs  mod.rs  read.rs  tests.rs
efivarcli/src/cli/boot/: add.rs  delete.rs  enable_disable.rs  get_entries.rs  list.rs  mod.rs  next.rs
efivarcli/src/cli/boot/order/: add.rs  get.rs  mod.rs  remove.rs  set.rs  tests.rs
efivarcli/src/cli/boot/partition/: linux.rs  mod.rs  windows.rs
efivarcli/src/cli/boot/tests/: add.rs  delete.rs  enable_disable.rs  get_entries.rs  mod.rs  next.rs
