[package]
name = "efiboot"
version = "1.1.3"
authors = ["Vincent Tavernier <v.tavernier@pm.me>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/vtavernier/efiboot-rs"
homepage = "https://github.com/vtavernier/efiboot-rs/tree/master/efiboot"
documentation = "https://docs.rs/efiboot"
keywords = ["efi"]
categories = []
description = "EFI boot manager variable editor written in Rust"
edition = "2018"

[dependencies]
efivar = { version = "1.1.3", path = "../efivar", features = ["store"] }
byteorder = "1.4.3"
itertools = "0.11.0"
paw = "1.0.0"
structopt = { version = "0.3.26", features = ["paw"] }
uuid = { version = "1.4.1" }

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }_{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "bin"
