[package]
name = "efiboot"
version = "1.4.0"
authors = ["Vincent Tavernier <v.tavernier@pm.me>", "iTrooz <cratesio@itrooz.fr>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/iTrooz/efiboot-rs"
homepage = "https://github.com/iTrooz/efiboot-rs/tree/main/efiboot"
documentation = "https://docs.rs/efiboot"
keywords = ["efi"]
categories = []
description = "EFI boot manager variable editor written in Rust"
edition = "2018"

[dependencies]
byteorder = "1.4.3"
clap = { version = "4.4.6", features = ["derive", "env"] }
efivar = { version = "1.4.0", path = "../efivar", features = ["store"] }
itertools = "0.11.0"
uuid = { version = "1.4.1" }

[dev-dependencies]
tempfile = "3.8.0"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }_{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "bin"
