[package]
name = "efivar"
version = "2.0.0"
authors = ["Vincent Tavernier <v.tavernier@pm.me>", "iTrooz <cratesio@itrooz.fr>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/iTrooz/efivar-rs"
homepage = "https://github.com/iTrooz/efivar-rs"
documentation = "https://docs.rs/efivar"
keywords = ["efi"]
categories = []
description = """
Rust crate for manipulating EFI variables using the OS interface.
"""
edition = "2018"

[dependencies]
byteorder = "1.4.3"
bitflags = "2.3.3"

base64 = { version = "0.21.2", optional = true }
serde = { version = "1.0.171", optional = true }
serde_derive = { version = "1.0.164", optional = true }
toml = { version = "0.7.6", optional = true }
uuid = { version = "1.4.1", features = ["serde"] }
lazy_static = "1.4.0"
thiserror = "1.0.49"

[target.'cfg(unix)'.dependencies]
rustix = { version = "0.38.30", features = ["fs"] }

[target.'cfg(windows)'.dependencies]
ntapi = "0.4.1"
winapi = { version = "0.3.9", features = ["winbase", "errhandlingapi", "winnt", "processthreadsapi", "securitybaseapi", "handleapi"] }

[features]
store = ["base64", "serde", "serde_derive", "toml"]

[dev-dependencies]
version-sync = "0.9.4"
