[package]
name = "efivarcli"
version = "2.0.0"
authors = ["Vincent Tavernier <v.tavernier@pm.me>", "iTrooz <cratesio@itrooz.fr>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/iTrooz/efivar-rs"
homepage = "https://github.com/iTrooz/efivar-rs/tree/main/efivar"
documentation = "https://docs.rs/efivar"
keywords = ["efi"]
categories = []
description = "EFI boot manager variable editor written in Rust"
edition = "2018"

[dependencies]
anyhow = "1.0.98"
byteorder = "1.4.3"
clap = { version = "4.4.6", features = ["derive", "env"] }
efivar = { version = "2.0.0", path = "../efivar", features = ["store"] }
env_logger = "0.11.8"
itertools = "0.11.0"
log = "0.4.27"
uuid = { version = "1.4.1" }

[dev-dependencies]
tempfile = "3.8.0"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }_{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "bin"
